parser.out
Created by PLY (http://www.dabeaz.com/ply)

Unused terminals:

    MAIN
    PRINTLN
    SCANF
    VOID

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> ListaDeclaracoes
Rule 2     ListaDeclaracoes -> Declaracao
Rule 3     ListaDeclaracoes -> ListaDeclaracoes Declaracao
Rule 4     Declaracao -> DeclaracaoVariavel
Rule 5     Declaracao -> DeclaracaoFuncao
Rule 6     Declaracao -> Comentario
Rule 7     Declaracao -> Array
Rule 8     Declaracao -> DeclaracaoEstrutura
Rule 9     Declaracao -> EstruturaControle
Rule 10    Array -> ID LBRACKET Expression RBRACKET
Rule 11    Array -> ID LBRACKET RBRACKET
Rule 12    ArrayInicializacao -> LBRACE ExpressaoLista RBRACE
Rule 13    ExpressaoLista -> <empty>
Rule 14    ExpressaoLogica -> ExpressaoRelacional
Rule 15    ExpressaoLogica -> ExpressaoLogica AND ExpressaoRelacional
Rule 16    ExpressaoLogica -> ExpressaoLogica OR ExpressaoRelacional
Rule 17    ExpressaoLogica -> NOT ExpressaoRelacional
Rule 18    ExpressaoRelacional -> ExpressaoAritmetica
Rule 19    ExpressaoRelacional -> ExpressaoAritmetica MAIOR_QUE ExpressaoAritmetica
Rule 20    ExpressaoRelacional -> ExpressaoAritmetica MA_IGUAL ExpressaoAritmetica
Rule 21    ExpressaoRelacional -> ExpressaoAritmetica MENOR_QUE ExpressaoAritmetica
Rule 22    ExpressaoRelacional -> ExpressaoAritmetica ME_IGUAL ExpressaoAritmetica
Rule 23    ExpressaoRelacional -> ExpressaoAritmetica DIF_DE ExpressaoAritmetica
Rule 24    ExpressaoRelacional -> ExpressaoAritmetica COMPARA ExpressaoAritmetica
Rule 25    ExpressaoAritmetica -> ExpressaoMultiplicativa
Rule 26    ExpressaoAritmetica -> ExpressaoAritmetica PLUS ExpressaoMultiplicativa
Rule 27    ExpressaoAritmetica -> ExpressaoAritmetica MINUS ExpressaoMultiplicativa
Rule 28    ExpressaoMultiplicativa -> ExpressaoUnaria
Rule 29    ExpressaoMultiplicativa -> ExpressaoMultiplicativa MULT ExpressaoUnaria
Rule 30    ExpressaoMultiplicativa -> ExpressaoMultiplicativa DIV ExpressaoUnaria
Rule 31    ExpressaoMultiplicativa -> ExpressaoMultiplicativa MOD ExpressaoUnaria
Rule 32    ExpressaoUnaria -> ExpressaoPostfix
Rule 33    ExpressaoUnaria -> MINUS ExpressaoUnaria
Rule 34    ExpressaoUnaria -> PLUS ExpressaoUnaria
Rule 35    ExpressaoUnaria -> INCREMENT ExpressaoPostfix
Rule 36    ExpressaoUnaria -> DECREMENT ExpressaoPostfix
Rule 37    ExpressaoPostfix -> Primaria
Rule 38    ExpressaoPostfix -> Primaria LBRACKET Expression RBRACKET
Rule 39    ExpressaoPostfix -> Primaria LPAREN Argumentos RPAREN
Rule 40    ExpressaoPostfix -> Primaria DOT ID
Rule 41    ExpressaoPostfix -> Primaria ARROW ID
Rule 42    Argumentos -> ExpressaoLista
Rule 43    Argumentos -> <empty>
Rule 44    Primaria -> ID
Rule 45    Primaria -> NUMBER
Rule 46    Primaria -> NUM_DEC
Rule 47    Primaria -> TEXTO
Rule 48    Primaria -> LPAREN Expression RPAREN
Rule 49    DeclaracaoEstrutura -> STRUCT ID LBRACE DeclaracaoVariavel RBRACE SEMICOLON
Rule 50    Atribuicao -> ID EQUALS Expression
Rule 51    Atribuicao -> ID PLUS EQUALS Expression
Rule 52    Atribuicao -> ID MINUS EQUALS Expression
Rule 53    Atribuicao -> ID MULT EQUALS Expression
Rule 54    Atribuicao -> ID DIV EQUALS Expression
Rule 55    Atribuicao -> ID MOD EQUALS Expression
Rule 56    Atribuicao -> ID AND AND EQUALS Expression
Rule 57    Atribuicao -> ID OR OR EQUALS Expression
Rule 58    Atribuicao -> ID EQUALS ID
Rule 59    Atribuicao -> ID PLUS EQUALS ID
Rule 60    Atribuicao -> ID MINUS EQUALS ID
Rule 61    Atribuicao -> ID MULT EQUALS ID
Rule 62    Atribuicao -> ID DIV EQUALS ID
Rule 63    Atribuicao -> ID MOD EQUALS ID
Rule 64    Atribuicao -> ID AND AND EQUALS ID
Rule 65    Atribuicao -> ID OR OR EQUALS ID
Rule 66    EstruturaControle -> IF LPAREN Expression RPAREN Bloco
Rule 67    EstruturaControle -> IF LPAREN Expression RPAREN Bloco ELSE Bloco
Rule 68    EstruturaControle -> WHILE LPAREN Expression RPAREN Bloco
Rule 69    EstruturaControle -> FOR LPAREN Expression SEMICOLON Expression SEMICOLON Expression RPAREN Bloco
Rule 70    EstruturaControle -> SWITCH LPAREN Expression RPAREN CaseLista
Rule 71    EstruturaControle -> BREAK SEMICOLON
Rule 72    EstruturaControle -> CONTINUE SEMICOLON
Rule 73    EstruturaControle -> RETURN Expression SEMICOLON
Rule 74    CaseLista -> CaseDecl
Rule 75    CaseLista -> CaseDecl CaseLista
Rule 76    CaseDecl -> CASE Expression COLON Bloco
Rule 77    CaseDecl -> DEFAULT COLON Bloco
Rule 78    DeclaracaoVariavel -> Tipo ID SEMICOLON
Rule 79    DeclaracaoVariavel -> Tipo ID EQUALS Expression SEMICOLON
Rule 80    Tipo -> INT
Rule 81    Tipo -> FLOAT
Rule 82    Tipo -> DOUBLE
Rule 83    Tipo -> CHAR
Rule 84    Tipo -> BOOLEAN
Rule 85    DeclaracaoFuncao -> Tipo ID LPAREN Parametros RPAREN Bloco
Rule 86    Parametros -> Parametro
Rule 87    Parametros -> Parametros COMMA Parametro
Rule 88    Parametro -> Tipo ID
Rule 89    Parametro -> Tipo ID LBRACKET RBRACKET
Rule 90    Parametro -> Tipo DOT DOT DOT ID
Rule 91    Bloco -> LBRACE Declaracao RBRACE
Rule 92    Comentario -> COMMENTS
Rule 93    Expression -> Atribuicao
Rule 94    Expression -> ExpressaoLogica

Terminals, with rules where they appear

AND                  : 15 56 56 64 64
ARROW                : 41
BOOLEAN              : 84
BREAK                : 71
CASE                 : 76
CHAR                 : 83
COLON                : 76 77
COMMA                : 87
COMMENTS             : 92
COMPARA              : 24
CONTINUE             : 72
DECREMENT            : 36
DEFAULT              : 77
DIF_DE               : 23
DIV                  : 30 54 62
DOT                  : 40 90 90 90
DOUBLE               : 82
ELSE                 : 67
EQUALS               : 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 79
FLOAT                : 81
FOR                  : 69
ID                   : 10 11 40 41 44 49 50 51 52 53 54 55 56 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 78 79 85 88 89 90
IF                   : 66 67
INCREMENT            : 35
INT                  : 80
LBRACE               : 12 49 91
LBRACKET             : 10 11 38 89
LPAREN               : 39 48 66 67 68 69 70 85
MAIN                 : 
MAIOR_QUE            : 19
MA_IGUAL             : 20
MENOR_QUE            : 21
ME_IGUAL             : 22
MINUS                : 27 33 52 60
MOD                  : 31 55 63
MULT                 : 29 53 61
NOT                  : 17
NUMBER               : 45
NUM_DEC              : 46
OR                   : 16 57 57 65 65
PLUS                 : 26 34 51 59
PRINTLN              : 
RBRACE               : 12 49 91
RBRACKET             : 10 11 38 89
RETURN               : 73
RPAREN               : 39 48 66 67 68 69 70 85
SCANF                : 
SEMICOLON            : 49 69 69 71 72 73 78 79
STRUCT               : 49
SWITCH               : 70
TEXTO                : 47
VOID                 : 
WHILE                : 68
error                : 

Nonterminals, with rules where they appear

Argumentos           : 39
Array                : 7
ArrayInicializacao   : 
Atribuicao           : 93
Bloco                : 66 67 67 68 69 76 77 85
CaseDecl             : 74 75
CaseLista            : 70 75
Comentario           : 6
Declaracao           : 2 3 91
DeclaracaoEstrutura  : 8
DeclaracaoFuncao     : 5
DeclaracaoVariavel   : 4 49
EstruturaControle    : 9
ExpressaoAritmetica  : 18 19 19 20 20 21 21 22 22 23 23 24 24 26 27
ExpressaoLista       : 12 42
ExpressaoLogica      : 15 16 94
ExpressaoMultiplicativa : 25 26 27 29 30 31
ExpressaoPostfix     : 32 35 36
ExpressaoRelacional  : 14 15 16 17
ExpressaoUnaria      : 28 29 30 31 33 34
Expression           : 10 38 48 50 51 52 53 54 55 56 57 66 67 68 69 69 69 70 73 76 79
ListaDeclaracoes     : 1 3
Parametro            : 86 87
Parametros           : 85 87
Primaria             : 37 38 39 40 41
Programa             : 0
Tipo                 : 78 79 85 88 89 90


state 0

    (0) S' -> . Programa
    (1) Programa -> . ListaDeclaracoes
    (2) ListaDeclaracoes -> . Declaracao
    (3) ListaDeclaracoes -> . ListaDeclaracoes Declaracao
    (4) Declaracao -> . DeclaracaoVariavel
    (5) Declaracao -> . DeclaracaoFuncao
    (6) Declaracao -> . Comentario
    (7) Declaracao -> . Array
    (8) Declaracao -> . DeclaracaoEstrutura
    (9) Declaracao -> . EstruturaControle
    (78) DeclaracaoVariavel -> . Tipo ID SEMICOLON
    (79) DeclaracaoVariavel -> . Tipo ID EQUALS Expression SEMICOLON
    (85) DeclaracaoFuncao -> . Tipo ID LPAREN Parametros RPAREN Bloco
    (92) Comentario -> . COMMENTS
    (10) Array -> . ID LBRACKET Expression RBRACKET
    (11) Array -> . ID LBRACKET RBRACKET
    (49) DeclaracaoEstrutura -> . STRUCT ID LBRACE DeclaracaoVariavel RBRACE SEMICOLON
    (66) EstruturaControle -> . IF LPAREN Expression RPAREN Bloco
    (67) EstruturaControle -> . IF LPAREN Expression RPAREN Bloco ELSE Bloco
    (68) EstruturaControle -> . WHILE LPAREN Expression RPAREN Bloco
    (69) EstruturaControle -> . FOR LPAREN Expression SEMICOLON Expression SEMICOLON Expression RPAREN Bloco
    (70) EstruturaControle -> . SWITCH LPAREN Expression RPAREN CaseLista
    (71) EstruturaControle -> . BREAK SEMICOLON
    (72) EstruturaControle -> . CONTINUE SEMICOLON
    (73) EstruturaControle -> . RETURN Expression SEMICOLON
    (80) Tipo -> . INT
    (81) Tipo -> . FLOAT
    (82) Tipo -> . DOUBLE
    (83) Tipo -> . CHAR
    (84) Tipo -> . BOOLEAN

    COMMENTS        shift and go to state 12
    ID              shift and go to state 11
    STRUCT          shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    SWITCH          shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    RETURN          shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    DOUBLE          shift and go to state 23
    CHAR            shift and go to state 24
    BOOLEAN         shift and go to state 25

    Programa                       shift and go to state 1
    ListaDeclaracoes               shift and go to state 2
    Declaracao                     shift and go to state 3
    DeclaracaoVariavel             shift and go to state 4
    DeclaracaoFuncao               shift and go to state 5
    Comentario                     shift and go to state 6
    Array                          shift and go to state 7
    DeclaracaoEstrutura            shift and go to state 8
    EstruturaControle              shift and go to state 9
    Tipo                           shift and go to state 10

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> ListaDeclaracoes .
    (3) ListaDeclaracoes -> ListaDeclaracoes . Declaracao
    (4) Declaracao -> . DeclaracaoVariavel
    (5) Declaracao -> . DeclaracaoFuncao
    (6) Declaracao -> . Comentario
    (7) Declaracao -> . Array
    (8) Declaracao -> . DeclaracaoEstrutura
    (9) Declaracao -> . EstruturaControle
    (78) DeclaracaoVariavel -> . Tipo ID SEMICOLON
    (79) DeclaracaoVariavel -> . Tipo ID EQUALS Expression SEMICOLON
    (85) DeclaracaoFuncao -> . Tipo ID LPAREN Parametros RPAREN Bloco
    (92) Comentario -> . COMMENTS
    (10) Array -> . ID LBRACKET Expression RBRACKET
    (11) Array -> . ID LBRACKET RBRACKET
    (49) DeclaracaoEstrutura -> . STRUCT ID LBRACE DeclaracaoVariavel RBRACE SEMICOLON
    (66) EstruturaControle -> . IF LPAREN Expression RPAREN Bloco
    (67) EstruturaControle -> . IF LPAREN Expression RPAREN Bloco ELSE Bloco
    (68) EstruturaControle -> . WHILE LPAREN Expression RPAREN Bloco
    (69) EstruturaControle -> . FOR LPAREN Expression SEMICOLON Expression SEMICOLON Expression RPAREN Bloco
    (70) EstruturaControle -> . SWITCH LPAREN Expression RPAREN CaseLista
    (71) EstruturaControle -> . BREAK SEMICOLON
    (72) EstruturaControle -> . CONTINUE SEMICOLON
    (73) EstruturaControle -> . RETURN Expression SEMICOLON
    (80) Tipo -> . INT
    (81) Tipo -> . FLOAT
    (82) Tipo -> . DOUBLE
    (83) Tipo -> . CHAR
    (84) Tipo -> . BOOLEAN

    $end            reduce using rule 1 (Programa -> ListaDeclaracoes .)
    COMMENTS        shift and go to state 12
    ID              shift and go to state 11
    STRUCT          shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    SWITCH          shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    RETURN          shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    DOUBLE          shift and go to state 23
    CHAR            shift and go to state 24
    BOOLEAN         shift and go to state 25

    Declaracao                     shift and go to state 26
    DeclaracaoVariavel             shift and go to state 4
    DeclaracaoFuncao               shift and go to state 5
    Comentario                     shift and go to state 6
    Array                          shift and go to state 7
    DeclaracaoEstrutura            shift and go to state 8
    EstruturaControle              shift and go to state 9
    Tipo                           shift and go to state 10

state 3

    (2) ListaDeclaracoes -> Declaracao .

    COMMENTS        reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    ID              reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    STRUCT          reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    IF              reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    WHILE           reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    FOR             reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    SWITCH          reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    BREAK           reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    CONTINUE        reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    RETURN          reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    INT             reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    FLOAT           reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    DOUBLE          reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    CHAR            reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    BOOLEAN         reduce using rule 2 (ListaDeclaracoes -> Declaracao .)
    $end            reduce using rule 2 (ListaDeclaracoes -> Declaracao .)


state 4

    (4) Declaracao -> DeclaracaoVariavel .

    COMMENTS        reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    ID              reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    STRUCT          reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    IF              reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    WHILE           reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    FOR             reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    SWITCH          reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    BREAK           reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    CONTINUE        reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    RETURN          reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    INT             reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    FLOAT           reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    DOUBLE          reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    CHAR            reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    BOOLEAN         reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    $end            reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)
    RBRACE          reduce using rule 4 (Declaracao -> DeclaracaoVariavel .)


state 5

    (5) Declaracao -> DeclaracaoFuncao .

    COMMENTS        reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    ID              reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    STRUCT          reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    IF              reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    WHILE           reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    FOR             reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    SWITCH          reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    BREAK           reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    CONTINUE        reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    RETURN          reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    INT             reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    FLOAT           reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    DOUBLE          reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    CHAR            reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    BOOLEAN         reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    $end            reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)
    RBRACE          reduce using rule 5 (Declaracao -> DeclaracaoFuncao .)


state 6

